doc/audit/v0.2.0/aderyn-report.md
# Aderyn Analysis Report

This report was generated by [Aderyn](https://github.com/Cyfrin/aderyn), a static analysis tool built by [Cyfrin](https://cyfrin.io), a blockchain security company. This report is not a substitute for manual audit or security review. It should not be relied upon for any purpose other than to assist in the identification of potential security vulnerabilities.
# Table of Contents

- [Summary](#summary)
  - [Files Summary](#files-summary)
  - [Files Details](#files-details)
  - [Issue Summary](#issue-summary)
- [Low Issues](#low-issues)
  - [L-1: Centralization Risk](#l-1-centralization-risk)
  - [L-2: Unspecific Solidity Pragma](#l-2-unspecific-solidity-pragma)
  - [L-3: PUSH0 Opcode](#l-3-push0-opcode)
  - [L-4: Modifier Invoked Only Once](#l-4-modifier-invoked-only-once)
  - [L-5: Empty Block](#l-5-empty-block)
  - [L-6: Internal Function Used Only Once](#l-6-internal-function-used-only-once)
  - [L-7: State Change Without Event](#l-7-state-change-without-event)
  - [L-8: Unchecked Return](#l-8-unchecked-return)


# Summary

## Files Summary

| Key | Value |
| --- | --- |
| .sol Files | 12 |
| Total nSLOC | 663 |


## Files Details

| Filepath | nSLOC |
| --- | --- |
| contracts/CMTATConfidential.sol | 72 |
| contracts/CMTATConfidentialBase.sol | 197 |
| contracts/CMTATConfidentialLite.sol | 13 |
| contracts/mocks/ConfidentialReceiverMock.sol | 23 |
| contracts/mocks/Euint64Factory.sol | 19 |
| contracts/modules/CMTATConfidentialVersionModule.sol | 8 |
| contracts/modules/ERC7984BalanceViewModule.sol | 82 |
| contracts/modules/ERC7984BurnModule.sol | 36 |
| contracts/modules/ERC7984EnforcementModule.sol | 73 |
| contracts/modules/ERC7984MintModule.sol | 36 |
| contracts/modules/ERC7984PublishTotalSupplyModule.sol | 21 |
| contracts/modules/ERC7984TotalSupplyViewModule.sol | 83 |
| **Total** | **663** |


## Issue Summary

| Category | No. of Issues |
| --- | --- |
| High | 0 |
| Low | 8 |


# Low Issues

## L-1: Centralization Risk

Contracts have owners with privileged rights to perform admin tasks and need to be trusted to not perform malicious updates or drain funds.

<details><summary>11 Found Instances</summary>


- Found in contracts/CMTATConfidential.sol [Line: 45](contracts/CMTATConfidential.sol#L45)

	```solidity
	    function _authorizeTotalSupplyObserverManagement() internal virtual override onlyRole(SUPPLY_OBSERVER_ROLE) {}
	```

- Found in contracts/CMTATConfidential.sol [Line: 47](contracts/CMTATConfidential.sol#L47)

	```solidity
	    function _authorizeSetMaxSupplyObservers() internal virtual override onlyRole(DEFAULT_ADMIN_ROLE) {}
	```

- Found in contracts/CMTATConfidentialBase.sol [Line: 96](contracts/CMTATConfidentialBase.sol#L96)

	```solidity
	    function _authorizeMint() internal virtual override onlyRole(MINTER_ROLE) {}
	```

- Found in contracts/CMTATConfidentialBase.sol [Line: 98](contracts/CMTATConfidentialBase.sol#L98)

	```solidity
	    function _authorizeBurn() internal virtual override onlyRole(BURNER_ROLE) {}
	```

- Found in contracts/CMTATConfidentialBase.sol [Line: 100](contracts/CMTATConfidentialBase.sol#L100)

	```solidity
	    function _authorizeForcedTransfer() internal virtual override onlyRole(FORCED_OPS_ROLE) {}
	```

- Found in contracts/CMTATConfidentialBase.sol [Line: 102](contracts/CMTATConfidentialBase.sol#L102)

	```solidity
	    function _authorizeForcedBurn() internal virtual override onlyRole(FORCED_OPS_ROLE) {}
	```

- Found in contracts/CMTATConfidentialBase.sol [Line: 104](contracts/CMTATConfidentialBase.sol#L104)

	```solidity
	    function _authorizePause() internal virtual override onlyRole(PAUSER_ROLE) {}
	```

- Found in contracts/CMTATConfidentialBase.sol [Line: 106](contracts/CMTATConfidentialBase.sol#L106)

	```solidity
	    function _authorizeDeactivate() internal virtual override onlyRole(DEFAULT_ADMIN_ROLE) {}
	```

- Found in contracts/CMTATConfidentialBase.sol [Line: 108](contracts/CMTATConfidentialBase.sol#L108)

	```solidity
	    function _authorizeFreeze() internal virtual override onlyRole(ENFORCER_ROLE) {}
	```

- Found in contracts/CMTATConfidentialBase.sol [Line: 110](contracts/CMTATConfidentialBase.sol#L110)

	```solidity
	    function _authorizeObserverManagement() internal virtual override onlyRole(OBSERVER_ROLE) {}
	```

- Found in contracts/CMTATConfidentialBase.sol [Line: 112](contracts/CMTATConfidentialBase.sol#L112)

	```solidity
	    function _authorizePublishTotalSupply() internal virtual override onlyRole(SUPPLY_PUBLISHER_ROLE) {}
	```

</details>



## L-2: Unspecific Solidity Pragma

Consider using a specific version of Solidity in your contracts instead of a wide version. For example, instead of `pragma solidity ^0.8.0;`, use `pragma solidity 0.8.0;`

<details><summary>12 Found Instances</summary>


- Found in contracts/CMTATConfidential.sol [Line: 2](contracts/CMTATConfidential.sol#L2)

	```solidity
	pragma solidity ^0.8.27;
	```

- Found in contracts/CMTATConfidentialBase.sol [Line: 2](contracts/CMTATConfidentialBase.sol#L2)

	```solidity
	pragma solidity ^0.8.27;
	```

- Found in contracts/CMTATConfidentialLite.sol [Line: 2](contracts/CMTATConfidentialLite.sol#L2)

	```solidity
	pragma solidity ^0.8.27;
	```

- Found in contracts/mocks/ConfidentialReceiverMock.sol [Line: 2](contracts/mocks/ConfidentialReceiverMock.sol#L2)

	```solidity
	pragma solidity ^0.8.27;
	```

- Found in contracts/mocks/Euint64Factory.sol [Line: 2](contracts/mocks/Euint64Factory.sol#L2)

	```solidity
	pragma solidity ^0.8.27;
	```

- Found in contracts/modules/CMTATConfidentialVersionModule.sol [Line: 2](contracts/modules/CMTATConfidentialVersionModule.sol#L2)

	```solidity
	pragma solidity ^0.8.27;
	```

- Found in contracts/modules/ERC7984BalanceViewModule.sol [Line: 2](contracts/modules/ERC7984BalanceViewModule.sol#L2)

	```solidity
	pragma solidity ^0.8.27;
	```

- Found in contracts/modules/ERC7984BurnModule.sol [Line: 2](contracts/modules/ERC7984BurnModule.sol#L2)

	```solidity
	pragma solidity ^0.8.27;
	```

- Found in contracts/modules/ERC7984EnforcementModule.sol [Line: 2](contracts/modules/ERC7984EnforcementModule.sol#L2)

	```solidity
	pragma solidity ^0.8.27;
	```

- Found in contracts/modules/ERC7984MintModule.sol [Line: 2](contracts/modules/ERC7984MintModule.sol#L2)

	```solidity
	pragma solidity ^0.8.27;
	```

- Found in contracts/modules/ERC7984PublishTotalSupplyModule.sol [Line: 2](contracts/modules/ERC7984PublishTotalSupplyModule.sol#L2)

	```solidity
	pragma solidity ^0.8.27;
	```

- Found in contracts/modules/ERC7984TotalSupplyViewModule.sol [Line: 2](contracts/modules/ERC7984TotalSupplyViewModule.sol#L2)

	```solidity
	pragma solidity ^0.8.27;
	```

</details>



## L-3: PUSH0 Opcode

Solc compiler version 0.8.20 switches the default target EVM version to Shanghai, which means that the generated bytecode will include PUSH0 opcodes. Be sure to select the appropriate EVM version in case you intend to deploy on a chain other than mainnet like L2 chains that may not support PUSH0, otherwise deployment of your contracts will fail.

<details><summary>12 Found Instances</summary>


- Found in contracts/CMTATConfidential.sol [Line: 2](contracts/CMTATConfidential.sol#L2)

	```solidity
	pragma solidity ^0.8.27;
	```

- Found in contracts/CMTATConfidentialBase.sol [Line: 2](contracts/CMTATConfidentialBase.sol#L2)

	```solidity
	pragma solidity ^0.8.27;
	```

- Found in contracts/CMTATConfidentialLite.sol [Line: 2](contracts/CMTATConfidentialLite.sol#L2)

	```solidity
	pragma solidity ^0.8.27;
	```

- Found in contracts/mocks/ConfidentialReceiverMock.sol [Line: 2](contracts/mocks/ConfidentialReceiverMock.sol#L2)

	```solidity
	pragma solidity ^0.8.27;
	```

- Found in contracts/mocks/Euint64Factory.sol [Line: 2](contracts/mocks/Euint64Factory.sol#L2)

	```solidity
	pragma solidity ^0.8.27;
	```

- Found in contracts/modules/CMTATConfidentialVersionModule.sol [Line: 2](contracts/modules/CMTATConfidentialVersionModule.sol#L2)

	```solidity
	pragma solidity ^0.8.27;
	```

- Found in contracts/modules/ERC7984BalanceViewModule.sol [Line: 2](contracts/modules/ERC7984BalanceViewModule.sol#L2)

	```solidity
	pragma solidity ^0.8.27;
	```

- Found in contracts/modules/ERC7984BurnModule.sol [Line: 2](contracts/modules/ERC7984BurnModule.sol#L2)

	```solidity
	pragma solidity ^0.8.27;
	```

- Found in contracts/modules/ERC7984EnforcementModule.sol [Line: 2](contracts/modules/ERC7984EnforcementModule.sol#L2)

	```solidity
	pragma solidity ^0.8.27;
	```

- Found in contracts/modules/ERC7984MintModule.sol [Line: 2](contracts/modules/ERC7984MintModule.sol#L2)

	```solidity
	pragma solidity ^0.8.27;
	```

- Found in contracts/modules/ERC7984PublishTotalSupplyModule.sol [Line: 2](contracts/modules/ERC7984PublishTotalSupplyModule.sol#L2)

	```solidity
	pragma solidity ^0.8.27;
	```

- Found in contracts/modules/ERC7984TotalSupplyViewModule.sol [Line: 2](contracts/modules/ERC7984TotalSupplyViewModule.sol#L2)

	```solidity
	pragma solidity ^0.8.27;
	```

</details>



## L-4: Modifier Invoked Only Once

Consider removing the modifier or inlining the logic into the calling function.

<details><summary>2 Found Instances</summary>


- Found in contracts/modules/ERC7984PublishTotalSupplyModule.sol [Line: 34](contracts/modules/ERC7984PublishTotalSupplyModule.sol#L34)

	```solidity
	    modifier onlySupplyPublisher() {
	```

- Found in contracts/modules/ERC7984TotalSupplyViewModule.sol [Line: 57](contracts/modules/ERC7984TotalSupplyViewModule.sol#L57)

	```solidity
	    modifier onlyMaxObserversAdmin() {
	```

</details>



## L-5: Empty Block

Consider removing empty blocks.

<details><summary>18 Found Instances</summary>


- Found in contracts/CMTATConfidential.sol [Line: 45](contracts/CMTATConfidential.sol#L45)

	```solidity
	    function _authorizeTotalSupplyObserverManagement() internal virtual override onlyRole(SUPPLY_OBSERVER_ROLE) {}
	```

- Found in contracts/CMTATConfidential.sol [Line: 47](contracts/CMTATConfidential.sol#L47)

	```solidity
	    function _authorizeSetMaxSupplyObservers() internal virtual override onlyRole(DEFAULT_ADMIN_ROLE) {}
	```

- Found in contracts/CMTATConfidentialBase.sol [Line: 96](contracts/CMTATConfidentialBase.sol#L96)

	```solidity
	    function _authorizeMint() internal virtual override onlyRole(MINTER_ROLE) {}
	```

- Found in contracts/CMTATConfidentialBase.sol [Line: 98](contracts/CMTATConfidentialBase.sol#L98)

	```solidity
	    function _authorizeBurn() internal virtual override onlyRole(BURNER_ROLE) {}
	```

- Found in contracts/CMTATConfidentialBase.sol [Line: 100](contracts/CMTATConfidentialBase.sol#L100)

	```solidity
	    function _authorizeForcedTransfer() internal virtual override onlyRole(FORCED_OPS_ROLE) {}
	```

- Found in contracts/CMTATConfidentialBase.sol [Line: 102](contracts/CMTATConfidentialBase.sol#L102)

	```solidity
	    function _authorizeForcedBurn() internal virtual override onlyRole(FORCED_OPS_ROLE) {}
	```

- Found in contracts/CMTATConfidentialBase.sol [Line: 104](contracts/CMTATConfidentialBase.sol#L104)

	```solidity
	    function _authorizePause() internal virtual override onlyRole(PAUSER_ROLE) {}
	```

- Found in contracts/CMTATConfidentialBase.sol [Line: 106](contracts/CMTATConfidentialBase.sol#L106)

	```solidity
	    function _authorizeDeactivate() internal virtual override onlyRole(DEFAULT_ADMIN_ROLE) {}
	```

- Found in contracts/CMTATConfidentialBase.sol [Line: 108](contracts/CMTATConfidentialBase.sol#L108)

	```solidity
	    function _authorizeFreeze() internal virtual override onlyRole(ENFORCER_ROLE) {}
	```

- Found in contracts/CMTATConfidentialBase.sol [Line: 110](contracts/CMTATConfidentialBase.sol#L110)

	```solidity
	    function _authorizeObserverManagement() internal virtual override onlyRole(OBSERVER_ROLE) {}
	```

- Found in contracts/CMTATConfidentialBase.sol [Line: 112](contracts/CMTATConfidentialBase.sol#L112)

	```solidity
	    function _authorizePublishTotalSupply() internal virtual override onlyRole(SUPPLY_PUBLISHER_ROLE) {}
	```

- Found in contracts/modules/ERC7984BurnModule.sol [Line: 79](contracts/modules/ERC7984BurnModule.sol#L79)

	```solidity
	    function _validateBurn(address from) internal virtual {
	```

- Found in contracts/modules/ERC7984BurnModule.sol [Line: 91](contracts/modules/ERC7984BurnModule.sol#L91)

	```solidity
	    function _afterBurn(address from, euint64 burned) internal virtual {}
	```

- Found in contracts/modules/ERC7984EnforcementModule.sol [Line: 159](contracts/modules/ERC7984EnforcementModule.sol#L159)

	```solidity
	    function _validateForcedTransfer(address from, address to) internal virtual {
	```

- Found in contracts/modules/ERC7984EnforcementModule.sol [Line: 168](contracts/modules/ERC7984EnforcementModule.sol#L168)

	```solidity
	    function _validateForcedBurn(address from) internal virtual {
	```

- Found in contracts/modules/ERC7984EnforcementModule.sol [Line: 186](contracts/modules/ERC7984EnforcementModule.sol#L186)

	```solidity
	    function _afterBurn(address from, euint64 burned) internal virtual {}
	```

- Found in contracts/modules/ERC7984MintModule.sol [Line: 79](contracts/modules/ERC7984MintModule.sol#L79)

	```solidity
	    function _validateMint(address to) internal virtual {
	```

- Found in contracts/modules/ERC7984MintModule.sol [Line: 91](contracts/modules/ERC7984MintModule.sol#L91)

	```solidity
	    function _afterMint(address to, euint64 minted) internal virtual {}
	```

</details>



## L-6: Internal Function Used Only Once

Instead of separating the logic into a separate function, consider inlining the logic into the calling function. This can reduce the number of function calls and improve readability.

<details><summary>1 Found Instances</summary>


- Found in contracts/CMTATConfidentialBase.sol [Line: 87](contracts/CMTATConfidentialBase.sol#L87)

	```solidity
	    function initialize(
	```

</details>



## L-7: State Change Without Event

There are state variable changes in this function but no event is emitted. Consider emitting an event to enable offchain indexers to track the changes.

<details><summary>1 Found Instances</summary>


- Found in contracts/mocks/ConfidentialReceiverMock.sol [Line: 15](contracts/mocks/ConfidentialReceiverMock.sol#L15)

	```solidity
	    function setAccept(bool accept_) external {
	```

</details>



## L-8: Unchecked Return

Function returns a value but it is ignored. Consider checking the return value.

<details><summary>12 Found Instances</summary>


- Found in contracts/mocks/ConfidentialReceiverMock.sol [Line: 26](contracts/mocks/ConfidentialReceiverMock.sol#L26)

	```solidity
	        FHE.allow(result, msg.sender);
	```

- Found in contracts/mocks/Euint64Factory.sol [Line: 12](contracts/mocks/Euint64Factory.sol#L12)

	```solidity
	        FHE.allow(handle, msg.sender);
	```

- Found in contracts/mocks/Euint64Factory.sol [Line: 19](contracts/mocks/Euint64Factory.sol#L19)

	```solidity
	        FHE.allow(handle, msg.sender);
	```

- Found in contracts/mocks/Euint64Factory.sol [Line: 20](contracts/mocks/Euint64Factory.sol#L20)

	```solidity
	        FHE.allow(handle, authorized);
	```

- Found in contracts/modules/ERC7984BalanceViewModule.sol [Line: 93](contracts/modules/ERC7984BalanceViewModule.sol#L93)

	```solidity
	            FHE.allow(balanceHandle, newObserver);
	```

- Found in contracts/modules/ERC7984BalanceViewModule.sol [Line: 170](contracts/modules/ERC7984BalanceViewModule.sol#L170)

	```solidity
	            FHE.allow(confidentialBalanceOf(from), fromRoleObs);
	```

- Found in contracts/modules/ERC7984BalanceViewModule.sol [Line: 171](contracts/modules/ERC7984BalanceViewModule.sol#L171)

	```solidity
	            FHE.allow(transferred, fromRoleObs);
	```

- Found in contracts/modules/ERC7984BalanceViewModule.sol [Line: 174](contracts/modules/ERC7984BalanceViewModule.sol#L174)

	```solidity
	            FHE.allow(confidentialBalanceOf(to), toRoleObs);
	```

- Found in contracts/modules/ERC7984BalanceViewModule.sol [Line: 176](contracts/modules/ERC7984BalanceViewModule.sol#L176)

	```solidity
	                FHE.allow(transferred, toRoleObs);
	```

- Found in contracts/modules/ERC7984PublishTotalSupplyModule.sol [Line: 53](contracts/modules/ERC7984PublishTotalSupplyModule.sol#L53)

	```solidity
	        FHE.makePubliclyDecryptable(ts);
	```

- Found in contracts/modules/ERC7984TotalSupplyViewModule.sol [Line: 107](contracts/modules/ERC7984TotalSupplyViewModule.sol#L107)

	```solidity
	            FHE.allow(ts, observer);
	```

- Found in contracts/modules/ERC7984TotalSupplyViewModule.sol [Line: 164](contracts/modules/ERC7984TotalSupplyViewModule.sol#L164)

	```solidity
	            FHE.allow(ts, _supplyObservers[i]);
	```

</details>



