doc/audit/v0.3.0/aderyn-report.md
# Aderyn Analysis Report

This report was generated by [Aderyn](https://github.com/Cyfrin/aderyn), a static analysis tool built by [Cyfrin](https://cyfrin.io), a blockchain security company. This report is not a substitute for manual audit or security review. It should not be relied upon for any purpose other than to assist in the identification of potential security vulnerabilities.
# Table of Contents

- [Summary](#summary)
  - [Files Summary](#files-summary)
  - [Files Details](#files-details)
  - [Issue Summary](#issue-summary)
- [Low Issues](#low-issues)
  - [L-1: Centralization Risk](#l-1-centralization-risk)
  - [L-2: Unspecific Solidity Pragma](#l-2-unspecific-solidity-pragma)
  - [L-3: PUSH0 Opcode](#l-3-push0-opcode)
  - [L-4: Modifier Invoked Only Once](#l-4-modifier-invoked-only-once)
  - [L-5: Empty Block](#l-5-empty-block)
  - [L-6: Internal Function Used Only Once](#l-6-internal-function-used-only-once)
  - [L-7: Unchecked Return](#l-7-unchecked-return)


# Summary

## Files Summary

| Key | Value |
| --- | --- |
| .sol Files | 21 |
| Total nSLOC | 1276 |


## Files Details

| Filepath | nSLOC |
| --- | --- |
| contracts/deployment/CMTATConfidential.sol | 221 |
| contracts/CMTATConfidentialBase.sol | 297 |
| contracts/deployment/CMTATConfidentialLite.sol | 22 |
| contracts/deployment/CMTATConfidentialRuleEngine.sol | 66 |
| contracts/deployment/CMTATConfidentialWhitelist.sol | 80 |
| contracts/interfaces/IERC7984BalanceViewModule.sol | 19 |
| contracts/interfaces/IERC7984BurnModule.sol | 19 |
| contracts/interfaces/IERC7984EnforcementModule.sol | 36 |
| contracts/interfaces/IERC7984MintModule.sol | 19 |
| contracts/interfaces/IERC7984PublishTotalSupplyModule.sol | 6 |
| contracts/interfaces/IERC7984TokenAttributeModule.sol | 8 |
| contracts/interfaces/IERC7984TotalSupplyViewModule.sol | 29 |
| contracts/modules/CMTATConfidentialVersionModule.sol | 14 |
| contracts/modules/ERC7984BalanceViewModule.sol | 80 |
| contracts/modules/ERC7984BurnModule.sol | 41 |
| contracts/modules/ERC7984EnforcementModule.sol | 85 |
| contracts/modules/ERC7984MintModule.sol | 38 |
| contracts/modules/ERC7984PublishTotalSupplyModule.sol | 22 |
| contracts/modules/ERC7984RuleEngineModule.sol | 51 |
| contracts/modules/ERC7984TokenAttributeModule.sol | 31 |
| contracts/modules/ERC7984TotalSupplyViewModule.sol | 92 |
| **Total** | **1276** |


## Issue Summary

| Category | No. of Issues |
| --- | --- |
| High | 0 |
| Low | 7 |


# Low Issues

## L-1: Centralization Risk

Contracts have owners with privileged rights to perform admin tasks and need to be trusted to not perform malicious updates or drain funds.

<details><summary>14 Found Instances</summary>


- Found in contracts/deployment/CMTATConfidential.sol [Line: 62](contracts/deployment/CMTATConfidential.sol#L62)

	```solidity
	        onlyRole(SUPPLY_OBSERVER_ROLE)
	```

- Found in contracts/deployment/CMTATConfidential.sol [Line: 69](contracts/deployment/CMTATConfidential.sol#L69)

	```solidity
	        onlyRole(DEFAULT_ADMIN_ROLE)
	```

- Found in contracts/CMTATConfidentialBase.sol [Line: 109](contracts/CMTATConfidentialBase.sol#L109)

	```solidity
	    function _authorizeMint() internal virtual override onlyRole(MINTER_ROLE) {}
	```

- Found in contracts/CMTATConfidentialBase.sol [Line: 111](contracts/CMTATConfidentialBase.sol#L111)

	```solidity
	    function _authorizeBurn() internal virtual override onlyRole(BURNER_ROLE) {}
	```

- Found in contracts/CMTATConfidentialBase.sol [Line: 117](contracts/CMTATConfidentialBase.sol#L117)

	```solidity
	        onlyRole(FORCED_OPS_ROLE)
	```

- Found in contracts/CMTATConfidentialBase.sol [Line: 124](contracts/CMTATConfidentialBase.sol#L124)

	```solidity
	        onlyRole(FORCED_OPS_ROLE)
	```

- Found in contracts/CMTATConfidentialBase.sol [Line: 131](contracts/CMTATConfidentialBase.sol#L131)

	```solidity
	        onlyRole(PAUSER_ROLE)
	```

- Found in contracts/CMTATConfidentialBase.sol [Line: 138](contracts/CMTATConfidentialBase.sol#L138)

	```solidity
	        onlyRole(DEFAULT_ADMIN_ROLE)
	```

- Found in contracts/CMTATConfidentialBase.sol [Line: 145](contracts/CMTATConfidentialBase.sol#L145)

	```solidity
	        onlyRole(ENFORCER_ROLE)
	```

- Found in contracts/CMTATConfidentialBase.sol [Line: 152](contracts/CMTATConfidentialBase.sol#L152)

	```solidity
	        onlyRole(OBSERVER_ROLE)
	```

- Found in contracts/CMTATConfidentialBase.sol [Line: 159](contracts/CMTATConfidentialBase.sol#L159)

	```solidity
	        onlyRole(SUPPLY_PUBLISHER_ROLE)
	```

- Found in contracts/CMTATConfidentialBase.sol [Line: 166](contracts/CMTATConfidentialBase.sol#L166)

	```solidity
	        onlyRole(TOKEN_ATTRIBUTE_ROLE)
	```

- Found in contracts/deployment/CMTATConfidentialRuleEngine.sol [Line: 89](contracts/deployment/CMTATConfidentialRuleEngine.sol#L89)

	```solidity
	        onlyRole(RULE_ENGINE_ROLE)
	```

- Found in contracts/deployment/CMTATConfidentialWhitelist.sol [Line: 146](contracts/deployment/CMTATConfidentialWhitelist.sol#L146)

	```solidity
	        onlyRole(ALLOWLIST_ROLE)
	```

</details>



## L-2: Unspecific Solidity Pragma

Consider using a specific version of Solidity in your contracts instead of a wide version. For example, instead of `pragma solidity ^0.8.0;`, use `pragma solidity 0.8.0;`

<details><summary>21 Found Instances</summary>


- Found in contracts/deployment/CMTATConfidential.sol [Line: 2](contracts/deployment/CMTATConfidential.sol#L2)

	```solidity
	pragma solidity ^0.8.27;
	```

- Found in contracts/CMTATConfidentialBase.sol [Line: 2](contracts/CMTATConfidentialBase.sol#L2)

	```solidity
	pragma solidity ^0.8.27;
	```

- Found in contracts/deployment/CMTATConfidentialLite.sol [Line: 2](contracts/deployment/CMTATConfidentialLite.sol#L2)

	```solidity
	pragma solidity ^0.8.27;
	```

- Found in contracts/deployment/CMTATConfidentialRuleEngine.sol [Line: 2](contracts/deployment/CMTATConfidentialRuleEngine.sol#L2)

	```solidity
	pragma solidity ^0.8.27;
	```

- Found in contracts/deployment/CMTATConfidentialWhitelist.sol [Line: 2](contracts/deployment/CMTATConfidentialWhitelist.sol#L2)

	```solidity
	pragma solidity ^0.8.27;
	```

- Found in contracts/interfaces/IERC7984BalanceViewModule.sol [Line: 2](contracts/interfaces/IERC7984BalanceViewModule.sol#L2)

	```solidity
	pragma solidity ^0.8.27;
	```

- Found in contracts/interfaces/IERC7984BurnModule.sol [Line: 2](contracts/interfaces/IERC7984BurnModule.sol#L2)

	```solidity
	pragma solidity ^0.8.27;
	```

- Found in contracts/interfaces/IERC7984EnforcementModule.sol [Line: 2](contracts/interfaces/IERC7984EnforcementModule.sol#L2)

	```solidity
	pragma solidity ^0.8.27;
	```

- Found in contracts/interfaces/IERC7984MintModule.sol [Line: 2](contracts/interfaces/IERC7984MintModule.sol#L2)

	```solidity
	pragma solidity ^0.8.27;
	```

- Found in contracts/interfaces/IERC7984PublishTotalSupplyModule.sol [Line: 2](contracts/interfaces/IERC7984PublishTotalSupplyModule.sol#L2)

	```solidity
	pragma solidity ^0.8.27;
	```

- Found in contracts/interfaces/IERC7984TokenAttributeModule.sol [Line: 2](contracts/interfaces/IERC7984TokenAttributeModule.sol#L2)

	```solidity
	pragma solidity ^0.8.27;
	```

- Found in contracts/interfaces/IERC7984TotalSupplyViewModule.sol [Line: 2](contracts/interfaces/IERC7984TotalSupplyViewModule.sol#L2)

	```solidity
	pragma solidity ^0.8.27;
	```

- Found in contracts/modules/CMTATConfidentialVersionModule.sol [Line: 2](contracts/modules/CMTATConfidentialVersionModule.sol#L2)

	```solidity
	pragma solidity ^0.8.27;
	```

- Found in contracts/modules/ERC7984BalanceViewModule.sol [Line: 2](contracts/modules/ERC7984BalanceViewModule.sol#L2)

	```solidity
	pragma solidity ^0.8.27;
	```

- Found in contracts/modules/ERC7984BurnModule.sol [Line: 2](contracts/modules/ERC7984BurnModule.sol#L2)

	```solidity
	pragma solidity ^0.8.27;
	```

- Found in contracts/modules/ERC7984EnforcementModule.sol [Line: 2](contracts/modules/ERC7984EnforcementModule.sol#L2)

	```solidity
	pragma solidity ^0.8.27;
	```

- Found in contracts/modules/ERC7984MintModule.sol [Line: 2](contracts/modules/ERC7984MintModule.sol#L2)

	```solidity
	pragma solidity ^0.8.27;
	```

- Found in contracts/modules/ERC7984PublishTotalSupplyModule.sol [Line: 2](contracts/modules/ERC7984PublishTotalSupplyModule.sol#L2)

	```solidity
	pragma solidity ^0.8.27;
	```

- Found in contracts/modules/ERC7984RuleEngineModule.sol [Line: 2](contracts/modules/ERC7984RuleEngineModule.sol#L2)

	```solidity
	pragma solidity ^0.8.27;
	```

- Found in contracts/modules/ERC7984TokenAttributeModule.sol [Line: 2](contracts/modules/ERC7984TokenAttributeModule.sol#L2)

	```solidity
	pragma solidity ^0.8.27;
	```

- Found in contracts/modules/ERC7984TotalSupplyViewModule.sol [Line: 2](contracts/modules/ERC7984TotalSupplyViewModule.sol#L2)

	```solidity
	pragma solidity ^0.8.27;
	```

</details>



## L-3: PUSH0 Opcode

Solc compiler version 0.8.20 switches the default target EVM version to Shanghai, which means that the generated bytecode will include PUSH0 opcodes. Be sure to select the appropriate EVM version in case you intend to deploy on a chain other than mainnet like L2 chains that may not support PUSH0, otherwise deployment of your contracts will fail.

<details><summary>21 Found Instances</summary>


- Found in contracts/deployment/CMTATConfidential.sol [Line: 2](contracts/deployment/CMTATConfidential.sol#L2)

	```solidity
	pragma solidity ^0.8.27;
	```

- Found in contracts/CMTATConfidentialBase.sol [Line: 2](contracts/CMTATConfidentialBase.sol#L2)

	```solidity
	pragma solidity ^0.8.27;
	```

- Found in contracts/deployment/CMTATConfidentialLite.sol [Line: 2](contracts/deployment/CMTATConfidentialLite.sol#L2)

	```solidity
	pragma solidity ^0.8.27;
	```

- Found in contracts/deployment/CMTATConfidentialRuleEngine.sol [Line: 2](contracts/deployment/CMTATConfidentialRuleEngine.sol#L2)

	```solidity
	pragma solidity ^0.8.27;
	```

- Found in contracts/deployment/CMTATConfidentialWhitelist.sol [Line: 2](contracts/deployment/CMTATConfidentialWhitelist.sol#L2)

	```solidity
	pragma solidity ^0.8.27;
	```

- Found in contracts/interfaces/IERC7984BalanceViewModule.sol [Line: 2](contracts/interfaces/IERC7984BalanceViewModule.sol#L2)

	```solidity
	pragma solidity ^0.8.27;
	```

- Found in contracts/interfaces/IERC7984BurnModule.sol [Line: 2](contracts/interfaces/IERC7984BurnModule.sol#L2)

	```solidity
	pragma solidity ^0.8.27;
	```

- Found in contracts/interfaces/IERC7984EnforcementModule.sol [Line: 2](contracts/interfaces/IERC7984EnforcementModule.sol#L2)

	```solidity
	pragma solidity ^0.8.27;
	```

- Found in contracts/interfaces/IERC7984MintModule.sol [Line: 2](contracts/interfaces/IERC7984MintModule.sol#L2)

	```solidity
	pragma solidity ^0.8.27;
	```

- Found in contracts/interfaces/IERC7984PublishTotalSupplyModule.sol [Line: 2](contracts/interfaces/IERC7984PublishTotalSupplyModule.sol#L2)

	```solidity
	pragma solidity ^0.8.27;
	```

- Found in contracts/interfaces/IERC7984TokenAttributeModule.sol [Line: 2](contracts/interfaces/IERC7984TokenAttributeModule.sol#L2)

	```solidity
	pragma solidity ^0.8.27;
	```

- Found in contracts/interfaces/IERC7984TotalSupplyViewModule.sol [Line: 2](contracts/interfaces/IERC7984TotalSupplyViewModule.sol#L2)

	```solidity
	pragma solidity ^0.8.27;
	```

- Found in contracts/modules/CMTATConfidentialVersionModule.sol [Line: 2](contracts/modules/CMTATConfidentialVersionModule.sol#L2)

	```solidity
	pragma solidity ^0.8.27;
	```

- Found in contracts/modules/ERC7984BalanceViewModule.sol [Line: 2](contracts/modules/ERC7984BalanceViewModule.sol#L2)

	```solidity
	pragma solidity ^0.8.27;
	```

- Found in contracts/modules/ERC7984BurnModule.sol [Line: 2](contracts/modules/ERC7984BurnModule.sol#L2)

	```solidity
	pragma solidity ^0.8.27;
	```

- Found in contracts/modules/ERC7984EnforcementModule.sol [Line: 2](contracts/modules/ERC7984EnforcementModule.sol#L2)

	```solidity
	pragma solidity ^0.8.27;
	```

- Found in contracts/modules/ERC7984MintModule.sol [Line: 2](contracts/modules/ERC7984MintModule.sol#L2)

	```solidity
	pragma solidity ^0.8.27;
	```

- Found in contracts/modules/ERC7984PublishTotalSupplyModule.sol [Line: 2](contracts/modules/ERC7984PublishTotalSupplyModule.sol#L2)

	```solidity
	pragma solidity ^0.8.27;
	```

- Found in contracts/modules/ERC7984RuleEngineModule.sol [Line: 2](contracts/modules/ERC7984RuleEngineModule.sol#L2)

	```solidity
	pragma solidity ^0.8.27;
	```

- Found in contracts/modules/ERC7984TokenAttributeModule.sol [Line: 2](contracts/modules/ERC7984TokenAttributeModule.sol#L2)

	```solidity
	pragma solidity ^0.8.27;
	```

- Found in contracts/modules/ERC7984TotalSupplyViewModule.sol [Line: 2](contracts/modules/ERC7984TotalSupplyViewModule.sol#L2)

	```solidity
	pragma solidity ^0.8.27;
	```

</details>



## L-4: Modifier Invoked Only Once

Consider removing the modifier or inlining the logic into the calling function.

<details><summary>3 Found Instances</summary>


- Found in contracts/modules/ERC7984PublishTotalSupplyModule.sol [Line: 31](contracts/modules/ERC7984PublishTotalSupplyModule.sol#L31)

	```solidity
	    modifier onlySupplyPublisher() {
	```

- Found in contracts/modules/ERC7984RuleEngineModule.sol [Line: 20](contracts/modules/ERC7984RuleEngineModule.sol#L20)

	```solidity
	    modifier onlyRuleEngineManager() {
	```

- Found in contracts/modules/ERC7984TotalSupplyViewModule.sol [Line: 48](contracts/modules/ERC7984TotalSupplyViewModule.sol#L48)

	```solidity
	    modifier onlyMaxObserversAdmin() {
	```

</details>



## L-5: Empty Block

Consider removing empty blocks.

<details><summary>22 Found Instances</summary>


- Found in contracts/deployment/CMTATConfidential.sol [Line: 58](contracts/deployment/CMTATConfidential.sol#L58)

	```solidity
	    function _authorizeTotalSupplyObserverManagement()
	```

- Found in contracts/deployment/CMTATConfidential.sol [Line: 65](contracts/deployment/CMTATConfidential.sol#L65)

	```solidity
	    function _authorizeSetMaxSupplyObservers()
	```

- Found in contracts/CMTATConfidentialBase.sol [Line: 109](contracts/CMTATConfidentialBase.sol#L109)

	```solidity
	    function _authorizeMint() internal virtual override onlyRole(MINTER_ROLE) {}
	```

- Found in contracts/CMTATConfidentialBase.sol [Line: 111](contracts/CMTATConfidentialBase.sol#L111)

	```solidity
	    function _authorizeBurn() internal virtual override onlyRole(BURNER_ROLE) {}
	```

- Found in contracts/CMTATConfidentialBase.sol [Line: 113](contracts/CMTATConfidentialBase.sol#L113)

	```solidity
	    function _authorizeForcedTransfer()
	```

- Found in contracts/CMTATConfidentialBase.sol [Line: 120](contracts/CMTATConfidentialBase.sol#L120)

	```solidity
	    function _authorizeForcedBurn()
	```

- Found in contracts/CMTATConfidentialBase.sol [Line: 127](contracts/CMTATConfidentialBase.sol#L127)

	```solidity
	    function _authorizePause()
	```

- Found in contracts/CMTATConfidentialBase.sol [Line: 134](contracts/CMTATConfidentialBase.sol#L134)

	```solidity
	    function _authorizeDeactivate()
	```

- Found in contracts/CMTATConfidentialBase.sol [Line: 141](contracts/CMTATConfidentialBase.sol#L141)

	```solidity
	    function _authorizeFreeze()
	```

- Found in contracts/CMTATConfidentialBase.sol [Line: 148](contracts/CMTATConfidentialBase.sol#L148)

	```solidity
	    function _authorizeObserverManagement()
	```

- Found in contracts/CMTATConfidentialBase.sol [Line: 155](contracts/CMTATConfidentialBase.sol#L155)

	```solidity
	    function _authorizePublishTotalSupply()
	```

- Found in contracts/CMTATConfidentialBase.sol [Line: 162](contracts/CMTATConfidentialBase.sol#L162)

	```solidity
	    function _authorizeTokenAttributeManagement()
	```

- Found in contracts/CMTATConfidentialBase.sol [Line: 448](contracts/CMTATConfidentialBase.sol#L448)

	```solidity
	    function _beforeTransfer(address spender, address from, address to) internal virtual {}
	```

- Found in contracts/deployment/CMTATConfidentialRuleEngine.sol [Line: 85](contracts/deployment/CMTATConfidentialRuleEngine.sol#L85)

	```solidity
	    function _authorizeRuleEngineManagement()
	```

- Found in contracts/deployment/CMTATConfidentialWhitelist.sol [Line: 142](contracts/deployment/CMTATConfidentialWhitelist.sol#L142)

	```solidity
	    function _authorizeAllowlistManagement()
	```

- Found in contracts/modules/ERC7984BurnModule.sol [Line: 69](contracts/modules/ERC7984BurnModule.sol#L69)

	```solidity
	    function _validateBurn(address from) internal virtual {
	```

- Found in contracts/modules/ERC7984BurnModule.sol [Line: 81](contracts/modules/ERC7984BurnModule.sol#L81)

	```solidity
	    function _afterBurn(address from, euint64 burned) internal virtual {}
	```

- Found in contracts/modules/ERC7984EnforcementModule.sol [Line: 135](contracts/modules/ERC7984EnforcementModule.sol#L135)

	```solidity
	    function _validateForcedTransfer(
	```

- Found in contracts/modules/ERC7984EnforcementModule.sol [Line: 147](contracts/modules/ERC7984EnforcementModule.sol#L147)

	```solidity
	    function _validateForcedBurn(address from) internal virtual {
	```

- Found in contracts/modules/ERC7984EnforcementModule.sol [Line: 165](contracts/modules/ERC7984EnforcementModule.sol#L165)

	```solidity
	    function _afterBurn(address from, euint64 burned) internal virtual {}
	```

- Found in contracts/modules/ERC7984MintModule.sol [Line: 66](contracts/modules/ERC7984MintModule.sol#L66)

	```solidity
	    function _validateMint(address to) internal virtual {
	```

- Found in contracts/modules/ERC7984MintModule.sol [Line: 78](contracts/modules/ERC7984MintModule.sol#L78)

	```solidity
	    function _afterMint(address to, euint64 minted) internal virtual {}
	```

</details>



## L-6: Internal Function Used Only Once

Instead of separating the logic into a separate function, consider inlining the logic into the calling function. This can reduce the number of function calls and improve readability.

<details><summary>1 Found Instances</summary>


- Found in contracts/CMTATConfidentialBase.sol [Line: 100](contracts/CMTATConfidentialBase.sol#L100)

	```solidity
	    function initialize(
	```

</details>



## L-7: Unchecked Return

Function returns a value but it is ignored. Consider checking the return value.

<details><summary>8 Found Instances</summary>


- Found in contracts/modules/ERC7984BalanceViewModule.sol [Line: 69](contracts/modules/ERC7984BalanceViewModule.sol#L69)

	```solidity
	            FHE.allow(balanceHandle, newObserver);
	```

- Found in contracts/modules/ERC7984BalanceViewModule.sol [Line: 140](contracts/modules/ERC7984BalanceViewModule.sol#L140)

	```solidity
	            FHE.allow(confidentialBalanceOf(from), fromRoleObs);
	```

- Found in contracts/modules/ERC7984BalanceViewModule.sol [Line: 141](contracts/modules/ERC7984BalanceViewModule.sol#L141)

	```solidity
	            FHE.allow(transferred, fromRoleObs);
	```

- Found in contracts/modules/ERC7984BalanceViewModule.sol [Line: 144](contracts/modules/ERC7984BalanceViewModule.sol#L144)

	```solidity
	            FHE.allow(confidentialBalanceOf(to), toRoleObs);
	```

- Found in contracts/modules/ERC7984BalanceViewModule.sol [Line: 146](contracts/modules/ERC7984BalanceViewModule.sol#L146)

	```solidity
	                FHE.allow(transferred, toRoleObs);
	```

- Found in contracts/modules/ERC7984PublishTotalSupplyModule.sol [Line: 44](contracts/modules/ERC7984PublishTotalSupplyModule.sol#L44)

	```solidity
	        FHE.makePubliclyDecryptable(ts);
	```

- Found in contracts/modules/ERC7984TotalSupplyViewModule.sol [Line: 94](contracts/modules/ERC7984TotalSupplyViewModule.sol#L94)

	```solidity
	            FHE.allow(ts, observer);
	```

- Found in contracts/modules/ERC7984TotalSupplyViewModule.sol [Line: 151](contracts/modules/ERC7984TotalSupplyViewModule.sol#L151)

	```solidity
	            FHE.allow(ts, _supplyObservers[i]);
	```

</details>



